force-app/main/default/objects/Apttus__TemplateClauseReference__c/Apttus__TemplateClauseReference__c.object-meta.xml
<CustomObject>
    <description>Represents a clause reference in a template or a library</description>
    <label>Template Clause Reference</label>
    <nameField>
        <displayFormat>REF-{000000000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Clause References</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>