force-app/main/default/objects/Apttus__TemplateClauseReference__c/fields/Apttus__ClauseId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ClauseId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>ID of the associated clause</description>
    <label>Clause</label>
    <referenceTo>Apttus__APTS_Template__c</referenceTo>
    <relationshipLabel>Template References</relationshipLabel>
    <relationshipName>TemplateReferences</relationshipName>
    <type>Lookup</type>
</CustomField>