force-app/main/default/objects/Apttus__TemplateClauseReference__c/fields/Apttus__ClauseVersionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ClauseVersionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to clause version</description>
    <inlineHelpText>Lookup to clause version</inlineHelpText>
    <label>Clause Version</label>
    <referenceTo>Apttus__TemplateVersion__c</referenceTo>
    <relationshipLabel>Template Clause References (Clause Version)</relationshipLabel>
    <relationshipName>TemplateClauseReferenceClauseVersion</relationshipName>
    <type>Lookup</type>
</CustomField>