force-app/main/default/objects/Apttus__TemplateClauseReference__c/fields/Apttus__NeedsPublishing__c.field-meta.xml
<CustomField>
    <fullName>Apttus__NeedsPublishing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the clause needs to be published.</description>
    <inlineHelpText>Indicates whether the clause needs to be published.</inlineHelpText>
    <label>Needs Publishing</label>
    <type>Checkbox</type>
</CustomField>