force-app/main/default/objects/Apttus__TemplateClauseReference__c/fields/Apttus__TemplateId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__TemplateId__c</fullName>
    <description>ID of the template or library</description>
    <label>Template</label>
    <referenceTo>Apttus__APTS_Template__c</referenceTo>
    <relationshipLabel>Clause References</relationshipLabel>
    <relationshipName>ClauseReferences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>