force-app/main/default/objects/Apttus__TemplateClauseReference__c/fields/Apttus__TemplateReferenceId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__TemplateReferenceId__c</fullName>
    <description>The template external reference identifier</description>
    <label>Template Reference Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>